# ELangPatcher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  SearchMatcher.h  build_vs2022.cmd
LibELangPatch/: CMakeLists.txt  CallProxyStubWithEcxGen.cpp  CdeclPushAndCallGen.cpp  CodeGenHelper.h  DlLFunctionCallGen.cpp  ELangBulkPushGen.cpp  ELangInitFnGen.cpp  ELangLoaderInitGen.cpp  ResolveCallDllFunctionGen.cpp  VArgsProxyGen.cpp  WndEventProxyGen.cpp  WndEventStub.cpp  WndHandlerGen.cpp
LibELangPatch/include/: CallProxyStubWithEcxGen.h  CdeclPushAndCallGen.h  DlLFunctionCallGen.h  ELangBulkPushGen.h  ELangInitFnGen.h  ELangLoaderInitGen.h  ResolveCallDllFunctionGen.h  VArgsProxyGen.h  WndEventProxyGen.h  WndEventStub.h  WndHandlerGen.h
src/: ELangPatchFile.cpp  ELangPatchFile.h  ELangPatcher.cpp  ELangPatcher.h  PEParser.h  SearchMatcher.h  WndHandlerGen.cpp  WndHandlerGen.h  main.cpp  test.cpp
src/ELangPatcher/: ELangPatcherImpl.h  PatchAddFakeEWndStub.cpp  PatchDllResolveAndCall.cpp  PatchELangLoaderInitStub.cpp  PatchEWndUltimate.cpp  PatchEWndV02.cpp  PatchKernelInvokeCall.cpp  PatchLoadWndCall.cpp  PatchProxyStub.cpp  PatchSuspiciousCallWithParam.cpp  PatchWndEventHandlerMain.cpp
